--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/mskhirwar/react-pwa-example/issues"
   },
-  "homepage": "https://github.com/mskhirwar/react-pwa-example#readme"
+  "homepage": "https://github.com/mskhirwar/react-pwa-example#readme",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
+  }
 }
