--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0"
   }
 }
