--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
+    "parser": "babel-eslint",
+    "extends": "airbnb",
     "env": {
       "es6": true,
       "browser": true,
       "node": true
+    },
+    "rules": {
+      "react/jsx-filename-extension": 0,
+      "react/forbid-prop-types": 0
     }
 }
