--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "babel-preset-stage-0": "^6.24.1"
   },
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0"
   }
 }
