--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Example Progressive Web App using React Create App",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "dev": "nodemon --exec babel-node ./server/index.js",
     "lint": "eslint . --ext .js,.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "pre-commit": ["lint"],
+  "pre-commit": [
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mskhirwar/react-pwa-example.git"
@@ -23,7 +25,13 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -32,6 +40,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "nodemon": "^1.19.1",
     "pre-commit": "^1.2.2"
   }
 }
