--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,11 @@
     },
     "rules": {
       "react/jsx-filename-extension": 0,
-      "react/forbid-prop-types": 0
+      "no-use-before-define": [
+        "error",
+        {
+          "functions": false
+        }
+      ]
     }
 }
