--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
@@ -40,7 +41,11 @@
     "file-loader": "^4.0.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "pug": "^2.0.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
