--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node ./server/index.js",
-    "build": "NODE_ENV=production npx env-cmd .env webpack --config ./webpack/production/config.babel.js",
+    "build": "NODE_ENV=production npx webpack --config ./webpack/production/config.babel.js",
     "postinstall": "npm run build",
     "lint": "eslint . --ext .js,.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -49,6 +49,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "svg-inline-loader": "^0.8.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.34.0",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0"
@@ -64,5 +65,8 @@
     "nodemon": "^1.19.1",
     "pre-commit": "^1.2.2",
     "webpack-cli": "^3.3.4"
+  },
+  "engines": {
+    "node": "8.10.x"
   }
 }
