--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
       "node": true
     },
     "rules": {
+      "no-console": "off",
       "react/jsx-filename-extension": 0,
       "no-use-before-define": [
         "error",
