--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --exec babel-node ./server/index.js",
     "dev": "nodemon --exec babel-node ./server/index.js",
-    "build": "NODE_ENV=production npx webpack --config ./webpack/production/config.babel.js",
+    "build": "SET NODE_ENV=production npx webpack --config ./webpack/production/config.babel.js",
     "postinstall": "npm run build",
     "lint": "eslint . --ext .js,.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
